--- a/ubi8-python/dockerfile
+++ b/ubi8-python/dockerfile
@@ -1,5 +1,5 @@
 # Use ubi8-init image
-FROM redhat/ubi8-init
+FROM redhat/ubi8
 
 # Update and upgrade packages
 RUN yum update -y && yum upgrade -y
@@ -7,11 +7,11 @@ RUN yum update -y && yum upgrade -y
 # Install python and pip
 RUN yum install -y python3 python3-pip
 
-# Clean cache
+# Clean caché
 RUN yum clean all
 
 # Version
-LABEL version="1"
+LABEL version="1.1"
 
 # Author
 LABEL maintainer="Javier Moreno Sánchez"
